--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,7 +201,7 @@ body {
 /* --------Structure--------- */
 
 .main-padding {
-    padding: 130px 0px;
+    padding: 130px 0px 160px 0px;
 }
 
 .sec-padding {
@@ -223,14 +223,14 @@ body {
 }
 
 .nav-link:hover {
-    color: #f54949 !important;
+    color: #38c101 !important;
 }
 
 
 /* ----------Hero---------- */
 
 .hero {
-    background: #FAFBFF;
+    background: #edf0fb;
 }
 
 .hero-title {
@@ -243,11 +243,17 @@ body {
 }
 
 .hero-lead {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
     margin-bottom: 40px;
     color: #617594;
+}
+
+.hero-image {
+    top: 60px;
+    left: 120px;
+    z-index: 10;
 }
 
 
@@ -263,8 +269,8 @@ body {
 }
 
 .section-span {
-    border-bottom: 3px solid #f65858;
-    color: #f65858;
+    border-bottom: 3px solid #38c101;
+    color: #38c101;
     cursor: pointer;
 }
 
@@ -280,12 +286,12 @@ body {
 }
 
 .btn-red {
-    background-color: #f65858 !important;
+    background-color: #38c101 !important;
     color: #fff !important;
 }
 
 .btn-red:hover {
-    background-color: #f54949 !important;
+    background-color: #34b103 !important;
 }
 
 .main-btn {
@@ -307,6 +313,31 @@ body {
 .btn-no-bg {
     background-color: transparent !important;
     color: #000 !important;
-    border: 1px solid #e8e8e8 !important;
+    border: 1px solid #cbcdd8 !important;
     padding: 10px 20px !important;
+}
+
+
+/* -------Misc--------- */
+
+.svg-shape {
+    position: absolute;
+    top: 300px;
+    left: 500px;
+    width: 300px;
+}
+
+.hero-image-extra {
+    z-index: 11;
+}
+
+.hero-image-extra .extra-one {
+    width: 300px;
+    top: 380px;
+}
+
+.hero-image-extra .extra-two {
+    width: 220px;
+    top: 80px;
+    left: 300px;
 }
