--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,7 +219,7 @@ body {
 /* --------Navigation-------- */
 
 .nav-link {
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .nav-link:hover {
@@ -295,13 +295,14 @@ body {
 }
 
 .main-btn {
-    padding: 14px 25px;
+    padding: 18px 25px;
     font-size: 18px;
     line-height: 1.3333333;
     text-decoration: none !important;
     text-align: center;
     cursor: pointer;
     min-width: 250px !important;
+    border-radius: 100px !important;
 }
 
 .btn-small {
